Bug 284479 - Spinning wheel indicating when an account is connecting is sometimes in the wrong place
Summary: Spinning wheel indicating when an account is connecting is sometimes in the w...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 282193
  Show dependency treegraph
 
Reported: 2011-10-19 17:06 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-10-19 17:06:19 UTC
It should be fixed at the right of the combo box.
Comment 1 Martin Klapetek 2011-10-27 08:16:28 UTC
Git commit 4a0b1ca441e4ed5869032ee174774e041aa79748 by Martin Klapetek.
Committed on 27/10/2011 at 10:15.
Pushed by mklapetek into branch 'master'.

Make sure the spinning wheel is always in the right position

BUG: 284479

M  +13   -3    global-presence-chooser.cpp
M  +2    -0    global-presence-chooser.h

http://commits.kde.org/telepathy-contact-list/4a0b1ca441e4ed5869032ee174774e041aa79748