Make sure the spinning wheel is always in the right position

BUG: 284479